Fixed gallery overflow, again

--- a/client/src/app/components/gallery/gallery.component.scss
+++ b/client/src/app/components/gallery/gallery.component.scss
@@ -1,7 +1,7 @@
 .gallery-img {
   object-fit: contain;
   width: calc(380px - 0.2rem);
-  height: 245px;
+  height: 244px;
   margin: auto;
 }
 
